# hockey-tracking

./: README.md  detection.ipynb  pyproject.toml  run.py
