[tool.poetry]
name = "player-localization"
version = "0.1.0"
description = ""
authors = ["Jason Brumwell <jason.brumwell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.4.0"
pandas = "0.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
